refactor: 优化 BanTracker HTTP 请求与资源管理